<resources>
    <string name="app_name">Columbo FP Sample</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">A propos</string>
    <string name="title_activity_preferences">Settings</string>
    <string name="fp_record">Record finger print</string>
    <string name="fp_touch">Touch sensor</string>
    <string name="fp_title">Finger print</string>
    <string name="fp_recorded">Finger print recorded successfully</string>
    <string name="fingerprint_settings">Fingerprint Settings</string>
    <string name="pref_reader_name">pref_reader_name</string>
    <string name="reader_name">Reader Name</string>
    <string name="pref_serial_number">pref_serial_number</string>
    <string name="serial_number">Serial Number</string>
    <string name="pref_timeout">pref_timeoutr</string>
    <string name="timeout">Capture Timeout</string>
    <string name="pref_power_save_mode">pref_power_save_mode</string>
    <string name="enable_power_save_mode">Power Save Mode</string>
    <string name="pref_version">pref_version</string>
    <string name="pref_firmware_version">pref_firmware_version</string>
    <string name="firmware_version">Firmware Version</string>
    <string name="pref_production_revision">pref_production_revision</string>
    <string name="production_revision">Production Revision</string>
    <string name="opening_FP_reader">Opening FP reader…</string>
    <string name="fingerprint_explanation">Press FingerPrint button </string>
    <string name="wait_FP_powered">Waiting Fingerprint powered up…</string>
    <string name="press_FP_button">Press Fingerprint button</string>
    <string name="FP_opened_error">Opening Fingerprint reader failed !</string>
    <string name="error_power_on">Error powering on reader. Make sure System Services is installed on the device</string>
    <string name="thumb_rb">Thumb</string>
    <string name="forefinger_rb">Forefinger</string>
    <string name="middle_finger_rb">Middle Finger</string>
    <string name="ring_finger_rb">Ring Finger</string>
    <string name="little_finger_rb">Little Finger</string>
    <string name="unknown_finger_rb">Unknow</string>
    <string name="left_hand_rb">Left</string>
    <string name="right_hand_rb">Right</string>
    <string name="choose_finger_textView">Choose Finger</string>
    <string name="file_name_textView">File Name</string>
    <string name="save_button">save</string>
    <string name="choose_file_name_editText">Choose File Name</string>
    <string name="choose_hand_textView">Choose Hand</string>
    <string name="extension_textView">.png</string>
    <string name="error_message_save">You must select a Hand and a Finger</string>
    <string name="error_title_save">Finger Selection Error</string>
    <string name="unknow_finger_rb">Unknown</string>
    <string name="unknown_hand_rb">Unknown</string>
    <string name="success_save_internal">FingerPrint successfully save to :</string>
    <string name="external_device_unavailable">External Device unavailable / Save to:</string>
    <string name="external_device_available">External Device available / Save to:</string>

    <string-array name="acquisition_time_out">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
    </string-array>
</resources>
